fix: align parent elements which lose class

--- a/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.picture.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.picture.css
@@ -2,6 +2,11 @@
 /* SEE: https://github.com/django-cms/djangocms-picture/blob/2.3.0/djangocms_picture/models.py#L24-L34 */
 @import url("@tacc/core-styles/src/lib/_imports/components/align.css");
 
+/* Allow anchor tag and figure to be aligned like an image */
+:is(figure, a):has(.align-right) { @mixin align-right; }
+:is(figure, a):has(.align-left) { @mixin align-left; }
+:is(figure, a):has(.align-center) { @mixin align-center; }
+
 /* Allow anchor tag to wrap like a block but still behave inline */
 a:has(.img-fluid) {
   display: inline-block;
